odevzdani/tests/invalid_lex/lex05.java
"flasduflsdfha;sfohasodifhsdoifhasoifhasdoifhasdfhpuiasdhfgladhgkjasdhf;sadhfklsdhfashdfjah;slfkhads;lfha;lkfh;asdlfhsad;kfa;sljfh;kjHF;OUEWGRPQIUTQPIDJKFBSJADLKGFIUGFQWOEIUROEQIWURQWEOUTQPIFUHSDAJKF;SDLJBFJSADF'OIhfa;sfhsadkjfh;sadljfh;asdfhlawh;sodfiha'fIQHFDKJH;ASDKJFH;LHASDLGSADGASDFSDAFASFSDSDFSADFSADFLAKSUDF\H"
